# col732_project_webserver

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  col732_project.postman_collection.json  template.config.sh  test  test.rs
src/: main.rs
