[package]
name = "col732_project_webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
fork = "0.1"
exec = "0.3.1"
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.29", features = ["full"] }
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
port_check = "0.1.5"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"